# quad_ws

./: data.txt
Arduino Code/sendImu3/: sendImu3.ino
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/controller/: ImuData.h  MotorCommands.h  SonarData.h  XbeeData.h  controllerConfig.h
devel/include/imu/: ImuData.h
devel/include/motors/: MotorCommands.h  MotorVals.h
devel/include/quad_msgs/: ImuData.h  MotorCommands.h  SonarData.h  XbeeData.h
devel/include/sonar/: SonarData.h
devel/include/xbee/: XbeeData.h
devel/lib/controller/: controller
devel/lib/filters/: kalman_test
devel/lib/imu/: imu
devel/lib/motors/: motor_publisher  motor_test_1
devel/lib/pkgconfig/: controller.pc  filters.pc  imu.pc  motors.pc  quad_msgs.pc  sonar.pc  vision.pc  xbee.pc
devel/lib/sonar/: sonar
devel/lib/vision/: im_converter_node  vision
devel/lib/xbee/: xbee
src/: quad.launch  quad.launch~
src/controller/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/controller/cfg/: controller.cfg  controller.cfg~
src/controller/msg/: ImuData.msg
src/controller/src/: controller.cpp  controller.cpp~  imu.cpp  sonar.cpp  xbee1.cpp
src/filters/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/filters/src/: kalman-test.cpp  kalman-test.cpp~  kalman.cpp
src/imu/: CMakeLists.txt  package.xml
src/imu/msg/: ImuData.msg
src/imu/src/: imu.cpp
src/motors/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/motors/src/: motor_test_1.cpp  motor_test_1.cpp~
src/quad_msgs/: CMakeLists.txt  package.xml  package.xml~
src/quad_msgs/msg/: ImuData.msg  MotorCommands.msg  SonarData.msg  XbeeData.msg  XbeeData.msg~
src/sonar/: CMakeLists.txt  package.xml
src/sonar/msg/: SonarData.msg~
src/sonar/src/: sonar.cpp
src/vision/: CMakeLists.txt  CMakeLists.txt~
src/xbee/: CMakeLists.txt  package.xml
(+110 files in other folders)
